# parser

./: Cargo.toml  README.md
src/: combinators.rs  lib.rs  parser.rs  result.rs
src/parser/: apply.rs  mapping.rs  parser.rs  parser_fn.rs  sequence.rs  sources.rs
src/parser/sources/: always.rs  eof.rs  next.rs  one_of.rs  sat.rs  tag.rs
src/result/: result.rs
