[package]
name = "parser"
version = "0.1.0"
authors = ["danielm"]
edition = "2018"
description = "A parser combinator library."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = []

[dependencies]
combinators-rs = { version="0.2", git="https://github.com/Dynisious/combinators-rs" }

[patch.'https:github.com/Dynisious/combinators-rs']
combinators-rs = { path="../combinators-rs" }
